   Now the values for the config option "change_sub_scale_requires_restart"
   are different: -1 means autodetect, 0 = false, 1 = true (by default -1).
   Autodetect will check the mplayer version to know if it's recent enough
   to have the slave command "sub_scale". But autodetect can fail with very
   old versions of mplayer (< 1.0rc1).

(2007-10-31)
 * Added code to test the slave command "select_sub" (see 
   http://lists.mplayerhq.hu/pipermail/mplayer-dev-eng/2007-October/054651.html)
   The code is disabled by default. To activate it set USE_SELECT_SUB to 1 in
   config.h.

(2007-10-30)
 * Changed the layout of some sections in preferences to make them smaller.

(2007-10-29)
 * (Experimental) Enable or disable some actions according to the current state.
   For example, the audio actions should be disabled if the file has no audio
   track.
 * (Fix) The time slider goes to 0 if the user press stop twice.

(2007-10-26)
 * (Internal change) Renamed font_textscale in preferences to initial_sub_scale.
 * Assigned the new actions to change font size to the keys Shift+R (Size-) and
   Shift+T (Size+).
 * (Experimental) Now it's possible to dock the playlist on the left and right
   sides of the main window.

(2007-10-25)
 * Now the -nostop-xscreensaver option is passed to mplayer if the screensaver
   is not to be disabled.
 * Added two new options for the subtitle menu: Size+ and Size-. They change
   the subtitle size. This also changes the meaning of the Scale setting in
   Preferences->Subtitles, it specifies now the default subtitle size for 
   new videos.
   These new options use the new mplayer slave command sub_scale, so changing
   the size won't require to restart mplayer. Unfortunately this doesn't work
   with the SSA/ASS lib, in this case mplayer will be restarted.
   If you use an old version of mplayer which doesn't have the sub_scale 
   slave command, you need to set to "true" the following option in the 